--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,7 @@ input.search-submit {
 .weather-app-city {
   font-size: 40px;
   font-weight: 900;
+  margin-bottom: 0px;
 }
 
 .weather-app-temperature {
@@ -57,9 +58,16 @@ input.search-submit {
 .weather-app-icon {
   font-size: 40px;
 }
+div p {
+  margin-top: 0px;
+}
+
 footer {
   border-top: 1px solid rgb(255, 255, 255);
   padding: 20px 30px 0 0;
   text-align: center;
-  font-size: ;
+  font-size: 14px;
+}
+a {
+  color: white;
 }
