--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: plum;
+  background-color: rgb(255, 255, 255);
   font-family: "Roboto", sans-serif;
 }
 
@@ -9,7 +9,7 @@ header {
 }
 
 .weather-app {
-  background: grey;
+  background: rgb(255, 163, 243);
 
   max-width: 600px;
   margin: 70px auto;
@@ -46,25 +46,30 @@ input.search-submit {
 .weather-app-temperature {
   display: flex;
   font-size: 80px;
-
+  line-height: 1.5;
   margin-left: 10px;
   font-weight: bold;
 }
 .weather-app-unit {
   font-size: 30px;
-  margin-top: 16px;
+  margin-top: 17px;
 }
 
 .weather-app-icon {
-  font-size: 40px;
+  width: 88px;
+  height: 88px;
+  margin-top: 15px;
 }
-div p {
-  margin-top: 0px;
+.weather-details {
+  margin-top: 2px;
+  line-height: 24px;
+  font-size: 16px;
+  margin-bottom: 40px;
 }
 
 footer {
   border-top: 1px solid rgb(255, 255, 255);
-  padding: 20px 30px 0 0;
+  padding: 30px 0 0 0;
   text-align: center;
   font-size: 14px;
 }
