--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,29 @@ input.search-submit {
   font-size: 16px;
   margin-bottom: 40px;
 }
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin: 30px;
+}
+
+.weather-forecast-date {
+  text-align: center;
+  font-size: 16px;
+}
+
+.weather-forecast-icon {
+  text-align: center;
+  font-size: 36px;
+}
+.weather-forecast-temperature {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+.weather-forecast-temperatures {
+  text-align: center;
+}
 
 footer {
   border-top: 1px solid rgb(255, 255, 255);
