--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,7 @@ input.search-submit {
 .weather-forecast {
   display: flex;
   justify-content: space-around;
-  margin: 30px;
+  margin-bottom: 30px;
 }
 
 .weather-forecast-date {
@@ -78,16 +78,19 @@ input.search-submit {
 }
 
 .weather-forecast-icon {
-  text-align: center;
-  font-size: 36px;
-}
-.weather-forecast-temperature {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 .weather-forecast-temperatures {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
   text-align: center;
+}
+.weather-forecast-temperature {
+  padding: 0 10px;
 }
 
 footer {
