--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,11 @@ header {
 }
 
 .weather-app {
+  background: linear-gradient(
+    109.6deg,
+    rgba(79, 148, 243, 0.73) 11.2%,
+    rgba(140, 105, 193, 0.87) 91.2%
+  );
   max-width: 600px;
   margin: 70px auto;
   border-radius: 20px;
@@ -23,7 +28,7 @@ input.search-input {
   font-size: 16px;
 }
 input.search-submit {
-  background-color: purple;
+  background-color: #fb5c8d;
   border: none;
   border-radius: 10px;
   padding: 20px 30px;
@@ -36,12 +41,14 @@ input.search-submit {
 }
 
 .weather-app-city {
+  color: white;
   font-size: 40px;
   font-weight: 900;
   margin-bottom: 0px;
 }
 
 .weather-app-temperature {
+  color: white;
   display: flex;
   font-size: 80px;
   line-height: 1.5;
@@ -49,6 +56,7 @@ input.search-submit {
   font-weight: bold;
 }
 .weather-app-unit {
+  color: white;
   font-size: 30px;
   margin-top: 17px;
 }
@@ -59,17 +67,27 @@ input.search-submit {
   margin-top: 15px;
 }
 .weather-details {
+  color: white;
   margin-top: 2px;
   line-height: 24px;
   font-size: 16px;
   margin-bottom: 40px;
 }
+.weather-details strong {
+  color: #fb5c8d;
+}
 .weather-forecast {
+  color: white;
   display: flex;
   justify-content: space-around;
   margin-bottom: 30px;
 }
-
+.weather-forecast-day {
+  border: 1px solid #ffffff;
+  border-radius: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+}
 .weather-forecast-date {
   text-align: center;
   font-size: 16px;
@@ -86,6 +104,9 @@ input.search-submit {
   justify-content: center;
   margin-top: 10px;
   text-align: center;
+}
+.weather-forecast-temperatures strong {
+  color: #fb5c8d;
 }
 .weather-forecast-temperature {
   padding: 0 10px;
